# libzakauthe

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libaute.pc.in  libzakauth.pc.in  libzakauthe.pc.in
data/: Makefile.am  aute_confi_schema.xml
docs/reference/: Makefile.am  libaute-decl-list.txt  libaute-decl.txt  libaute-docs.sgml  libaute-sections.txt  libaute-undeclared.txt  libaute-undocumented.txt  libaute-unused.txt
docs/reference/tmpl/: aute.sgml  libaute-unused.sgml  libaute.sgml
src/: Makefile.am  aute.c  authepluggable.c  authepluggable.h  libaute.h  libzakauth.h  libzakauthe.h
